--- a/src/main/resources/Re_Connection_Requests.fxml
+++ b/src/main/resources/Re_Connection_Requests.fxml
@@ -11,7 +11,7 @@
    <children>
       <ImageView id="parquet" fitHeight="400.0" fitWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@misc/sfondo%20parquet.jpg" />
+            <Image url="@misc/sfondo parquet.jpg" />
          </image>
       </ImageView>
       <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
